--- a/RollerDerbyPad/www/templates/pages/home.html
+++ b/RollerDerbyPad/www/templates/pages/home.html
@@ -1,36 +1,27 @@
-<ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+<ion-view view-title="Home" ng-controller="homeController as homeCtrl">
+    <ion-content class="home-page">
+        <div class="list card">
+            <div class="item item-avatar">
+                <h2>Welcome, {{user.name}}</h2>
+                <p>Here are some quick links to help you get started</p>
+            </div>
+            <div class="item item-body">
+                <div class="list card">
+                    <a ng-click="gamePopup()" class="item item-icon-left">
+                        <i class="icon ion-ios-plus"></i>
+                        Add a game
+                    </a>
 
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+                    <a ng-click="playerPopup()" class="item item-icon-left">
+                        <i class="icon ion-ios-plus"></i>
+                        Add a player
+                    </a>
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
-</ion-side-menus>
+                    <a ng-click="teamPopup()" class="item item-icon-left">
+                        <i class="icon ion-ios-plus"></i>
+                        Add a team
+                    </a>
+            </div>
+        </div>
+
+</ion-view>
