--- a/RollerDerbyPad/www/templates/directives/nav-bar.html
+++ b/RollerDerbyPad/www/templates/directives/nav-bar.html
@@ -3,7 +3,10 @@
     <a class="tab-item" ng-click="goToPage(&apos;/home&apos;)">
         <i class="icon ion-home"></i> Home
     </a>
-    <a class="tab-item" ng-click="teamPage('/teams')">
+    <!--<a class="tab-item" ng-click="teamPage('/teams')">-->
+        <!--<i class="icon ion-star"></i> Teams-->
+    <!--</a>-->
+    <a class="tab-item" ng-click="openPopover($event)">
         <i class="icon ion-star"></i> Teams
     </a>
     <a class="tab-item" ng-click="goToPage(&apos;/games&apos;)">
