--- a/RollerDerbyPad/www/templates/pages/teams.html
+++ b/RollerDerbyPad/www/templates/pages/teams.html
@@ -2,24 +2,36 @@
     <ion-content class="team-page">
         <div class="card">
             <div class="item item-divider">
-                <label class="item item-input item-select">
-                    <span class="input-label">My Roster</span>
-                    <select data-ng-model="registerCtrl.user.state" ng-options="v for (k, v) in registerCtrl.states">
-                        <option value="">Select a Team</option>
-                    </select>
-                </label>
+                <h1 class="card-title">{{currentTeam.get("teamName")}}</h1>
             </div>
             <div class="item item-text-wrap">
                 <div class="list card">
-                    <a ng-click="gamePopup()" class="item item-icon-left">
-                        <i class=""></i>
-                        Player here (click here to edit player information)
-                    </a>
+                    <div class="row header">
+                        <div class="col">Player Name</div>
+                        <div class="col">Player Number</div>
+                        <div class="col"></div>
+                    </div>
+                    <div class="row" ng-repeat="player in players">
+                        <div class="col">
+                            <a ng-click="editPlayer(player)" class="item">
+                                <i class=""></i>
+                                {{player.get("name");}}
+                            </a>
+                        </div>
+                        <div class="col">
+                            <p class="item">{{player.get("playerNumber")}}</p>
+                        </div>
+                        <div class="col" ng-click="viewStats(player)">
+                            <button class="button button-positive viewStats" ng-click="viewStats(player)">View Stats</button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="popup-buttons">
-                <button class="button button-positive" ng-click="addTeam()">Add a new team</button>
-                <button class="button button-positive">Add a new player</button>
+                <button class="button button-energized" ng-click="editTeam(currentTeam)">Edit Team</button>
+                <button class="button button-calm" ng-click="addPlayer()">Add a new player</button>
+                <button class="button button-assertive" ng-click="showConfirm()">Delete Team</button>
             </div>
         </div>
     </ion-content>
