--- a/RollerDerbyPad/www/templates/directives/game-modal.html
+++ b/RollerDerbyPad/www/templates/directives/game-modal.html
@@ -6,38 +6,55 @@
         <!-- end ngIf: subTitle -->
     </div>
     <div class="popup-body">
-        <form name="gameForm">
-            <div class="list list-inset">
-                <label class="item item-input item-stacked-label">
-                    <span class="input-label">Date</span>
-                    <input type="date" ng-model="game.date" required>
-                </label>
-                <label class="item item-input item-select">
-                    <span class="input-label">Home Team</span>
-                    <select ng-model="game.home" ng-options="team.get('teamName') for team in teams" required>
-                        <option value="">Select a Team</option>
-                    </select>
-                </label>
-                <label class="item item-input item-stacked-label">
-                    <span class="input-label">Visitor Team</span>
-                    <input type="text" placeholder="The Bad Guys" ng-model="game.visitor" required>
-                </label>
-                <label class="item item-input item-stacked-label">
-                    <span class="input-label">City</span>
-                    <input type="text" placeholder="Spokane" ng-model="player.city" required>
-                </label>
-                <label class="item item-input item-select">
-                    <span class="input-label">State</span>
-                    <select ng-model="player.state" ng-options="v for (k, v) in states" required>
-                        <option value="">Select a State</option>
-                    </select>
-                </label>
-            </div>
-        </form>
+
+            <form name="gameForm">
+                <div class="popup-buttons" ng-if="game.update">
+                    <button ng-if="formDisabled" class="button button-energized" ng-click="showStartConfirm(game)">Start Game</button>
+                    <button ng-if="!formDisabled" class="button button-positive" ng-click="saveChanges(game)">Save Changes</button>
+                    <button class="button button-balanced" ng-click="editGame(game)">Edit Game</button>
+                </div>
+                <fieldset ng-style="{'background-color': formDisabled ? '#ddd' : ''}" ng-disabled="formDisabled">
+                    <div class="list list-inset">
+                        <label class="item item-input item-stacked-label">
+                            <span class="input-label">Date</span>
+                            <input type="date" ng-model="game.date" required>
+                        </label>
+                        <label class="item item-input item-stacked-label">
+                            <span class="input-label">Time</span>
+                            <input type="time" ng-model="game.time" required>
+                        </label>
+                        <label class="item item-input item-stacked-label" ng-if="formDisabled">
+                            <span class="input-label">Home Team</span>
+                            <input type="text" ng-model="game.homeName" required>
+                        </label>
+                        <label class="item item-input item-select" ng-if="!formDisabled">
+                            <span class="input-label">Home Team</span>
+                            <select ng-model="game.home" ng-options="team.get('teamName') for team in teams" required>
+                                <option value="">Select a Team</option>
+                            </select>
+                        </label>
+                        <label class="item item-input item-stacked-label">
+                            <span class="input-label">Visitor Team</span>
+                            <input type="text" placeholder="The Bad Guys" ng-model="game.visitor" required>
+                        </label>
+                        <label class="item item-input item-stacked-label">
+                            <span class="input-label">City</span>
+                            <input type="text" placeholder="Spokane" ng-model="game.city" required>
+                        </label>
+                        <label class="item item-input item-select">
+                            <span class="input-label">State</span>
+                            <select ng-model="game.state" ng-options="v for (k, v) in states" required>
+                                <option value="">Select a State</option>
+                            </select>
+                        </label>
+                    </div>
+                </fieldset>
+            </form>
+
     </div>
-    <div class="popup-buttons">
-        <button ng-if="!player.update" class="button button-positive" ng-click="addGame(game)">Add game</button>
-        <button ng-if="player.update" class="button button-balanced" ng-click="editPlayer(player)">Save Changes</button>
+    <div class="popup-buttons" ng-if="formDisabled || !game.update">
+        <button ng-if="!game.update" class="button button-positive" ng-click="addGame(game)">Add game</button>
+        <button ng-if="game.update" class="button button-assertive" ng-click="showRemoveConfirm(game)">Remove Game</button>
         <button class="button button-light" ng-click="closeModal()">Exit</button>
     </div>
 </div>
