update to github

--- a/RollerDerbyPad/www/templates/directives/nav-bar.html
+++ b/RollerDerbyPad/www/templates/directives/nav-bar.html
@@ -12,6 +12,9 @@
     <a class="tab-item" ng-click="goToPage(&apos;/games&apos;)">
         <i class="icon ion-flag"></i> Games
     </a>
+    <a class="tab-item" ng-click="goToPage(&apos;/gameplay&apos;)">
+        <i class="icon ion-ios-game-controller-a"></i> Gameplay
+    </a>
     <!--<a class="tab-item" ng-click="goToPage(&apos;/settings&apos;)">-->
     <a class="tab-item" ng-click="editAccount()">
         <i class="icon ion-gear-a"></i> Account
